[gd_scene format=3 uid="uid://c7xk2nqm8hp1v"]

[ext_resource type="Script" path="res://ui/player_name_entry.gd" id="1_script"]

[node name="PlayerNameEntry" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.15, 1)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="TitleLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Enter Your Name"
horizontal_alignment = 1

[node name="NameInput" type="LineEdit" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(250, 40)
layout_mode = 2
placeholder_text = "Player name..."
max_length = 20

[node name="StatusLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
horizontal_alignment = 1
text = ""

[node name="ActionButton" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 45)
layout_mode = 2
text = "Host Game"

[node name="BackButton" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(150, 36)
layout_mode = 2
text = "Back"
